add check dependencies requirements to dev requirements

--- a/dev/requirements.txt
+++ b/dev/requirements.txt
@@ -1,4 +1,6 @@
 -r requirements/bump_version_requirements.txt
+-r requirements/check_dependencies_requirements.txt
+-r requirements/check_links_requirements.txt
 -r requirements/ci_requirements.txt
 -r requirements/docs_requirements.txt
 -r requirements/pypi_requirements.txt
