--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,9 @@ on:
     branches:
       - main
 
+env:
+  UV_SYSTEM_PYTHON: 1
+
 jobs:
   ci:
     runs-on: ${{ matrix.os }}
@@ -24,17 +27,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: '**/*requirements.txt'
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: pip
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt
-          pip install -r dev/requirements/ci_requirements.txt
+          uv pip install --upgrade pip setuptools wheel
+          uv pip install -r requirements.txt -r dev/requirements/ci_requirements.txt
 
       - name: Test with pytest
         run: |
