--- a/.github/workflows/check_dependencies.yaml
+++ b/.github/workflows/check_dependencies.yaml
@@ -11,6 +11,9 @@ on:
     branches:
       - main
 
+env:
+  UV_SYSTEM_PYTHON: 1
+
 jobs:
   check_dependencies:
     runs-on: ${{ matrix.os }}
@@ -27,6 +30,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: '**/*requirements.txt'
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
@@ -35,9 +44,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt
-          pip install -r dev/requirements.txt
+          uv pip install --upgrade pip setuptools wheel
+          uv pip install -r requirements.txt -r dev/requirements.txt
 
       - name: Check dependencies with pip-audit
         run: |
@@ -61,6 +69,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: '**/*requirements.txt'
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
@@ -69,9 +83,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install geospaitial-lab-aviary
-          pip install -r dev/requirements/check_dependencies_requirements.txt
+          uv pip install --upgrade pip setuptools wheel
+          uv pip install geospaitial-lab-aviary -r dev/requirements/check_dependencies_requirements.txt
 
       - name: Check dependencies with pip-audit
         run: |
