--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -15,12 +15,21 @@ permissions:
   contents: read
   issues: write
 
+env:
+  UV_SYSTEM_PYTHON: 1
+
 jobs:
   check_links:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: '**/*requirements.txt'
 
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
@@ -30,8 +39,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r dev/requirements/check_links_requirements.txt
+          uv pip install --upgrade pip setuptools wheel
+          uv pip install -r dev/requirements/check_links_requirements.txt
 
       - name: Convert notebooks to markdown
         run: |
