--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -16,12 +16,21 @@ permissions:
   contents: write
   pull-requests: write
 
+env:
+  UV_SYSTEM_PYTHON: 1
+
 jobs:
   bump_version:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: '**/*requirements.txt'
 
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
@@ -30,8 +39,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r dev/requirements/bump_version_requirements.txt
+          uv pip install --upgrade pip setuptools wheel
+          uv pip install -r dev/requirements/bump_version_requirements.txt
 
       - name: Bump version
         run: |
