--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -8,6 +8,9 @@ on:
 permissions:
   contents: write
 
+env:
+  UV_SYSTEM_PYTHON: 1
+
 jobs:
   docs:
     runs-on: ubuntu-latest
@@ -20,27 +23,21 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: '**/*requirements.txt'
+
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      - name: Set cache id
-        run: |
-          echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
-
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        with:
-          key: mkdocs-material-${{ env.cache_id }}
-          path: .cache
-          restore-keys: |
-            mkdocs-material-
-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r dev/requirements/docs_requirements.txt
+          uv pip install --upgrade pip setuptools wheel
+          uv pip install -r dev/requirements/docs_requirements.txt
 
       - name: Build and deploy docs
         run: |
