--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -8,12 +8,21 @@ on:
 permissions:
   contents: read
 
+env:
+  UV_SYSTEM_PYTHON: 1
+
 jobs:
   pypi:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: '**/*requirements.txt'
 
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
@@ -22,8 +31,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r dev/requirements/pypi_requirements.txt
+          uv pip install --upgrade pip setuptools wheel
+          uv pip install -r dev/requirements/pypi_requirements.txt
 
       - name: Build source distribution
         run: |
