--- a/.github/workflows/check_dependencies.yaml
+++ b/.github/workflows/check_dependencies.yaml
@@ -9,11 +9,13 @@ on:
       - main
     paths:
       - '**/*requirements.txt'
+      - '.github/workflows/check_dependencies.yaml'
   push:
     branches:
       - main
     paths:
       - '**/*requirements.txt'
+      - '.github/workflows/check_dependencies.yaml'
 
 env:
   UV_SYSTEM_PYTHON: 1
