--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -11,6 +11,7 @@ on:
       - '**/*.html'
       - '**/*.ipynb'
       - '**/*.md'
+      - '.github/workflows/check_links.yaml'
   push:
     branches:
       - main
@@ -18,6 +19,7 @@ on:
       - '**/*.html'
       - '**/*.ipynb'
       - '**/*.md'
+      - '.github/workflows/check_links.yaml'
 
 permissions:
   contents: read
