--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,7 @@ on:
     paths:
       - '**/*requirements.txt'
       - '**/*.py'
+      - '.github/workflows/ci.yaml'
       - 'pyproject.toml'
   push:
     branches:
@@ -14,6 +15,7 @@ on:
     paths:
       - '**/*requirements.txt'
       - '**/*.py'
+      - '.github/workflows/ci.yaml'
       - 'pyproject.toml'
 
 env:
