--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -11,6 +11,7 @@ nav:
     - How-to Guides: how_to_guides/index.md
     - Installation:
       - How to install aviary with pip: how_to_guides/installation/how_to_install_aviary_with_pip.md
+      - How to install aviary with uv: how_to_guides/installation/how_to_install_aviary_with_uv.md
       - How to install aviary with Docker: how_to_guides/installation/how_to_install_aviary_with_docker.md
     - API:
       - How to use the bounding box: how_to_guides/api/how_to_use_the_bounding_box.md
