--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -4,6 +4,20 @@ on:
   release:
     types:
       - published
+  pull_request:
+    branches:
+      - main
+    paths:
+      - '.github/workflows/docs.yaml'
+      - 'dev/mkdocs.yaml'
+      - 'docs/**/*'
+  push:
+    branches:
+      - main
+    paths:
+      - '.github/workflows/docs.yaml'
+      - 'dev/mkdocs.yaml'
+      - 'docs/**/*'
 
 permissions:
   contents: write
@@ -12,7 +26,38 @@ env:
   UV_SYSTEM_PYTHON: 1
 
 jobs:
-  docs:
+  build_docs:
+    if: |
+      github.event_name == 'pull_request' ||
+      github.event_name == 'push'
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: '**/*requirements.txt'
+
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: |
+          uv pip install --upgrade pip setuptools wheel
+          uv pip install -r dev/requirements/docs_requirements.txt
+
+      - name: Build docs
+        run: |
+          mkdocs build -f dev/mkdocs.yaml
+
+  build_and_deploy_docs:
+    if: |
+      github.event_name == 'release'
     runs-on: ubuntu-latest
 
     steps:
