--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -71,8 +71,10 @@ jobs:
       - name: Create issue
         if: |
           env.lychee_exit_code != 0 &&
-          github.event_name != 'pull_request' &&
-          github.event_name != 'push'
+          (
+            github.event_name == 'workflow_dispatch' ||
+            github.event_name == 'schedule'
+          )
         uses: peter-evans/create-issue-from-file@v5
         with:
           title: 'Check links failed'
