add steps to workflow

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -51,6 +51,14 @@ jobs:
           uv pip install --upgrade pip setuptools wheel
           uv pip install -r dev/requirements/docs_requirements.txt
 
+      - name: Build maps
+        run: |
+          python -m docs.scripts.build_maps
+
+      - name: DEBUG
+        run: |
+          ls docs/how_to_guides/api/maps
+
       - name: Build docs
         run: |
           mkdocs build -f dev/mkdocs.yaml
@@ -83,6 +91,14 @@ jobs:
         run: |
           uv pip install --upgrade pip setuptools wheel
           uv pip install -r dev/requirements/docs_requirements.txt
+
+      - name: Build maps
+        run: |
+          python -m docs.scripts.build_maps
+
+      - name: DEBUG
+        run: |
+          ls docs/how_to_guides/api/maps
 
       - name: Build and deploy docs
         run: |
