--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -57,6 +57,8 @@ jobs:
 
       - name: DEBUG
         run: |
+          pwd
+          ls .
           ls docs/how_to_guides/api/maps
 
       - name: Build docs
@@ -98,6 +100,8 @@ jobs:
 
       - name: DEBUG
         run: |
+          pwd
+          ls .
           ls docs/how_to_guides/api/maps
 
       - name: Build and deploy docs
