--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Install dependencies
         run: |
           uv pip install --upgrade pip setuptools wheel
-          uv pip install -r dev/requirements/docs_requirements.txt
+          uv pip install -r requirements.txt -r dev/requirements/docs_requirements.txt
 
       - name: Build maps
         run: |
@@ -90,7 +90,7 @@ jobs:
       - name: Install dependencies
         run: |
           uv pip install --upgrade pip setuptools wheel
-          uv pip install -r dev/requirements/docs_requirements.txt
+          uv pip install -r requirements.txt -r dev/requirements/docs_requirements.txt
 
       - name: Build maps
         run: |
