pin actions in check links workflow to SHA

--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -33,16 +33,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@3b9817b1bf26186f03ab8277bab9b827ea5cc254 # v3.2.0
         with:
           enable-cache: true
           cache-dependency-glob: '**/*requirements.txt'
 
       - name: Set up Python 3.12
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
           python-version: '3.12'
           cache: pip
@@ -57,7 +57,7 @@ jobs:
           find . -name "*.ipynb" -exec jupyter nbconvert --to markdown {} \;
 
       - name: Check links with lychee
-        uses: lycheeverse/lychee-action@v2
+        uses: lycheeverse/lychee-action@7cd0af4c74a61395d455af97419279d86aafaede # v2.0.2
         with:
           args: |
             --exclude .*\/maps\/.*\.html$
@@ -75,7 +75,7 @@ jobs:
             github.event_name == 'workflow_dispatch' ||
             github.event_name == 'schedule'
           )
-        uses: peter-evans/create-issue-from-file@v5
+        uses: peter-evans/create-issue-from-file@e8ef132d6df98ed982188e460ebb3b5d4ef3a9cd # v5.0.1
         with:
           title: 'Check links failed'
           content-filepath: ./lychee/out.md
