--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,9 @@ jobs:
         python-version:
           - '3.10'
           - '3.12'
+        dependencies:
+          - latest
+          - lower-bounds
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -48,10 +51,17 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install latest dependencies
+        if: matrix.dependencies == latest
         run: |
           uv pip install --upgrade pip setuptools wheel
           uv pip install -r requirements.txt -r dev/requirements/ci_requirements.txt
+
+      - name: Install lower bounds dependencies
+        if: matrix.dependencies == 'lower-bounds'
+        run: |
+          uv pip install --upgrade pip setuptools wheel
+          uv pip install --resolution lowest -r requirements.txt -r dev/requirements/ci_requirements.txt
 
       - name: Test with pytest
         run: |
