--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pyyaml>=6.0.0
 rasterio>=1.4.0
 requests>=2.32.0
 rich>=13.9.0
-shapely>=2.0.0
+shapely>=2.0.4  # required for numpy>=2.0.0
 simplification>=0.7.0
 topojson>=1.9
 typer>=0.12.0
