change dependabot directory from root to dev

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -16,7 +16,7 @@ updates:
       - build
 
   - package-ecosystem: pip
-    directory: /
+    directory: /dev
     schedule:
       interval: weekly
       day: monday
