--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-geopandas==1.0.1
-huggingface_hub==0.26.1
-numpy==2.1.2
-onnxruntime==1.19.2
-pydantic==2.9.2
-pyyaml==6.0.2
-rasterio==1.4.1
-requests==2.32.3
-rich==13.9.2
-shapely==2.0.6
-simplification==0.7.13
-topojson==1.9
-typer==0.12.5
+geopandas>=1.0.0
+huggingface_hub>=0.26.0
+numpy>=2.0.0
+onnxruntime>=1.19.0
+pydantic>=2.9.0
+pyyaml>=6.0.1
+rasterio>=1.4.0
+requests>=2.32.0
+rich>=13.9.0
+shapely>=2.0.4  # required for numpy>=2.0.0
+simplification>=0.7.10
+topojson>=1.9
+typer>=0.12.0
