--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ omit = [
 [tool.coverage.report]
 exclude_also = [
     "def __repr__",
+    "def __str__",
     "raise NotImplementedError",
     "if __name__ == .__main__.:",
     "if TYPE_CHECKING:",
