--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -23,7 +23,10 @@ nav:
     - API Reference: api_reference/index.md
     - aviary:
       - BoundingBox: api_reference/bounding_box.md
-      - Channel: api_reference/channel.md
+      - Channel:
+        - Channel: api_reference/channel/channel.md
+        - ArrayChannel: api_reference/channel/array_channel.md
+        - GdfChannel: api_reference/channel/gdf_channel.md
       - Enums: api_reference/enums.md
       - Exceptions: api_reference/exceptions.md
       - ProcessArea: api_reference/process_area.md
