--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -25,8 +25,8 @@ nav:
       - BoundingBox: api_reference/bounding_box.md
       - Channel:
         - Channel: api_reference/channel/channel.md
-        - ArrayChannel: api_reference/channel/array_channel.md
-        - GdfChannel: api_reference/channel/gdf_channel.md
+        - RasterChannel: api_reference/channel/raster_channel.md
+        - VectorChannel: api_reference/channel/vector_channel.md
       - Enums: api_reference/enums.md
       - Exceptions: api_reference/exceptions.md
       - ProcessArea: api_reference/process_area.md
