--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,23 +1,23 @@
 name: Build and deploy docs
 
 on:
-#  release:
-#    types:
-#      - published
-#  pull_request:
-#    branches:
-#      - main
-#    paths:
-#      - '.github/workflows/docs.yaml'
-#      - 'dev/mkdocs.yaml'
-#      - 'docs/**/*'
-#  push:
-#    branches:
-#      - main
-#    paths:
-#      - '.github/workflows/docs.yaml'
-#      - 'dev/mkdocs.yaml'
-#      - 'docs/**/*'
+  release:
+    types:
+      - published
+  pull_request:
+    branches:
+      - main
+    paths:
+      - '.github/workflows/docs.yaml'
+      - 'dev/mkdocs.yaml'
+      - 'docs/**/*'
+  push:
+    branches:
+      - main
+    paths:
+      - '.github/workflows/docs.yaml'
+      - 'dev/mkdocs.yaml'
+      - 'docs/**/*'
 
 permissions:
   contents: write
