--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,8 @@ exclude_also = [
 
 [tool.pytest.ini_options]
 norecursedirs = [
-    "tests/_functional",
+    "tests/_functional/data",
+    "tests/_functional/geodata",
     "tests/data",
     "tests/geodata",
     "tests/pipeline",
