refactor(`TileFetcher`)!: prepare for major release (#475)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,10 +70,10 @@ exclude_also = [
 
 [tool.pytest.ini_options]
 norecursedirs = [
-    "tests/_functional",
+    "tests/_functional/data",
+    "tests/_functional/geodata",
     "tests/data",
     "tests/geodata",
-    "tests/inference",
     "tests/pipeline",
 ]
 pythonpath = ["."]
