edit ruff rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,11 @@ ignore = [
 inline-quotes = "single"
 multiline-quotes = "single"
 
+[tool.ruff.lint.flake8-type-checking]
+runtime-evaluated-base-classes = [
+    "pydantic.BaseModel",
+]
+
 [tool.ruff.lint.per-file-ignores]
 "aviary/_cli/cli.py" = [
     "T201",
