--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -43,6 +43,14 @@ nav:
     - aviary.pipeline:
       - PostprocessingPipeline: api_reference/pipeline/postprocessing_pipeline.md
       - SegmentationPipeline: api_reference/pipeline/segmentation_pipeline.md
+    - aviary.utils:
+        - CoordinatesFilter:
+            - CoordinatesFilter: api_reference/utils/coordinates_filter/coordinates_filter.md
+            - CompositeFilter: api_reference/utils/coordinates_filter/composite_filter.md
+            - DuplicatesFilter: api_reference/utils/coordinates_filter/duplicates_filter.md
+            - GeospatialFilter: api_reference/utils/coordinates_filter/geospatial_filter.md
+            - MaskFilter: api_reference/utils/coordinates_filter/mask_filter.md
+            - SetFilter: api_reference/utils/coordinates_filter/set_filter.md
   - CLI Reference:
       - CLI Reference: cli_reference/index.md
       - Segmentation pipeline: cli_reference/segmentation_pipeline.md
