--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -39,6 +39,16 @@ nav:
           - VRTFetcher: api_reference/inference/tile_fetcher/vrt_fetcher.md
           - WMSFetcher: api_reference/inference/tile_fetcher/wms_fetcher.md
       - TileLoader: api_reference/inference/tile_loader.md
+      - TilesProcessor:
+          - TilesProcessor: api_reference/inference/tiles_processor/tiles_processor.md
+          - CompositeProcessor: api_reference/inference/tiles_processor/composite_processor.md
+          - CopyProcessor: api_reference/inference/tiles_processor/copy_processor.md
+          - NormalizeProcessor: api_reference/inference/tiles_processor/normalize_processor.md
+          - RemoveBufferProcessor: api_reference/inference/tiles_processor/remove_buffer_processor.md
+          - RemoveProcessor: api_reference/inference/tiles_processor/remove_processor.md
+          - SelectProcessor: api_reference/inference/tiles_processor/select_processor.md
+          - StandardizeProcessor: api_reference/inference/tiles_processor/standardize_processor.md
+          - VectorizeProcessor: api_reference/inference/tiles_processor/vectorize_processor.md
       - TileSet: api_reference/inference/tile_set.md
     - aviary.pipeline:
       - PostprocessingPipeline: api_reference/pipeline/postprocessing_pipeline.md
