change light and dark mode icons

--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -96,14 +96,14 @@ theme:
       primary: white
       accent: custom
       toggle:
-        icon: material/toggle-switch
+        icon: material/lightbulb
         name: Switch to dark mode
     - media: '(prefers-color-scheme: dark)'
       scheme: slate
       primary: black
       accent: custom
       toggle:
-        icon: material/toggle-switch-off-outline
+        icon: material/lightbulb-outline
         name: Switch to light mode
 
 plugins:
