--- a/.github/workflows/check_dependencies.yaml
+++ b/.github/workflows/check_dependencies.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Install dependencies
         run: |
           uv pip install --upgrade pip setuptools wheel
-          uv pip install -r requirements.txt -r dev/requirements.txt
+          uv pip install .[cli] -r dev/requirements.txt
 
       - name: Check dependencies with pip-audit
         run: |
