--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Install dependencies
         run: |
           uv pip install --upgrade pip setuptools wheel
-          uv pip install -r requirements.txt -r dev/requirements/docs_requirements.txt
+          uv pip install .[cli] -r dev/requirements/docs_requirements.txt
 
       - name: Build maps
         run: |
@@ -84,7 +84,7 @@ jobs:
       - name: Install dependencies
         run: |
           uv pip install --upgrade pip setuptools wheel
-          uv pip install -r requirements.txt -r dev/requirements/docs_requirements.txt
+          uv pip install .[cli] -r dev/requirements/docs_requirements.txt
 
       - name: Build maps
         run: |
