--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,24 @@ classifiers = [
     "Topic :: Scientific/Engineering :: GIS",
 ]
 dynamic = [
-    "dependencies",
     "version",
+]
+dependencies = [
+    "geopandas>=1.0.0",
+    "numpy>=2.0.0",
+    "pydantic>=2.9.0",
+    "rasterio>=1.4.0",
+    "requests>=2.32.0",
+    "rich>=13.9.0",
+    "shapely>=2.0.4",
+    "simplification>=0.7.10",
+    "topojson>=1.9",
+]
+
+[project.optional-dependencies]
+cli = [
+    "pyyaml>=6.0.1",
+    "typer>=0.12.0",
 ]
 
 [project.urls]
@@ -42,7 +58,6 @@ Documentation = "https://geospaitial-lab.github.io/aviary"
 aviary = "aviary._cli.cli:app"
 
 [tool.setuptools.dynamic]
-dependencies = {file = "requirements.txt"}
 version = {attr = "aviary.__version__"}
 
 [tool.setuptools.packages]
