--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -50,9 +50,9 @@ jobs:
           uv pip install --upgrade pip setuptools wheel
           uv pip install .[cli] -r dev/requirements/docs_requirements.txt
 
-      - name: Build maps
-        run: |
-          python -m docs.scripts.build_maps
+#      - name: Build maps
+#        run: |
+#          python -m docs.scripts.build_maps
 
       - name: Build docs
         run: |
@@ -86,9 +86,9 @@ jobs:
           uv pip install --upgrade pip setuptools wheel
           uv pip install .[cli] -r dev/requirements/docs_requirements.txt
 
-      - name: Build maps
-        run: |
-          python -m docs.scripts.build_maps
+#      - name: Build maps
+#        run: |
+#          python -m docs.scripts.build_maps
 
       - name: Build and deploy docs
         run: |
