add set option to tile-pipeline command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,12 @@ ignore = [
     "PT003",
 ]
 
+[tool.ruff.lint.flake8-bugbear]
+extend-immutable-calls = [
+    "typer.Argument",
+    "typer.Option",
+]
+
 [tool.ruff.lint.flake8-quotes]
 inline-quotes = "single"
 multiline-quotes = "single"
