--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,10 @@ cli = [
     "pyyaml>=6.0.1",
     "typer>=0.12.0",
 ]
+all = [
+    "pyyaml>=6.0.1",
+    "typer>=0.12.0",
+]
 
 [project.urls]
 Homepage = "https://www.github.com/geospaitial-lab/aviary"
